// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useScript > should insert the script and fail 1`] = `
<div>
  <span>
    error
  </span>
</div>
`;

exports[`useScript > should insert the script and load 1`] = `
<div>
  <span>
    loaded
  </span>
</div>
`;
